fix: enhance quiz details display and update styling for better readability

--- a/style/question.css
+++ b/style/question.css
@@ -147,12 +147,14 @@ input[type="radio"]:checked + label {
   flex-direction: column;
   height: 100%;
   flex-grow: 1;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   align-items: center;
   justify-content: center;
   ul {
     flex-grow: 0;
     width: fit-content;
+    list-style: none;
+    font-size: 3rem;
   }
 }
 
